# naturalist-companion

./: .env.example  .gitignore  BOOTCAMP.md  Makefile  README.md  next_steps.md  pyproject.toml  requirements-dbrx-dev.txt  requirements-dbrx-notebook.txt  requirements-dbrx.txt  requirements-dev.txt  requirements-gcp-dev.txt  requirements-gcp.txt  requirements-ollama-dev.txt  requirements-ollama.txt  requirements-target-common.txt  requirements.txt
.github/workflows/: ci.yml
agentic_wikipedia/: __init__.py  langgraph_mvp.py  mvp_data.py
anc/: __main__.py  mvp.py  toy_data.py  web.py
anc/static/: style.css
anc/templates/: index.html
docs/: PRD.md  README.md  agentic_wikipedia_dbrx_spec.md  agentic_wikipedia_gcp_spec.md  anc_spec.ollama.md  anc_spec_dbrx.md  anc_spec_gcp.md  architecture_camera_vision.md  interview_demo.md  investor_demo_naturalist_flaneur.md  roadside_geology_v0_mvp_spec.md  roadside_geology_v0_spec.md  roadside_naturalist_v0_mvp_spec.md  roadside_naturalist_v0_spec.md  setup_vertex_ai.md  use_case_appalachia_i81.md  use_case_camera_roadcuts.md  use_case_naturalist_flaneur.md  vision_prompt_schema.md  vision_prompt_schema_naturalist.md  wireframes.md
docs/diagrams/: 01_local_architecture.puml  01_system_context.puml  02_gcp_architecture.puml  02_rag_components.puml  03_future_databricks_architecture.puml  03_question_answer_sequence.puml  04_langgraph_mvp_flow.puml  04_langgraph_route_guide_flow.puml  04_roadside_geology_langgraph.puml  05_anc_dbrx_current_state.puml  05_stopcard_contract.puml  06_anc_databricks_production_app.puml  06_vision_contract.puml  07_anc_dbrx_component_architecture.puml  07_camera_vision_architecture.puml  (+8 more)
notebooks/: agentic_wikipedia_gcp.ipynb  anc_dbrx.ipynb  anc_gcp.ipynb  anc_ollama.executed.ipynb  anc_ollama.html  anc_ollama.ipynb  anc_stategraph_ollama.ipynb  dbrx-connect.ipynb
scripts/: bootstrap_vertex.sh  dev_tasks.py  export_diagram_slides_pdf.py  export_notebook_pdf.py  install_macos_stategraph_launchd.py  render_route_guide_mermaid.py  run_stategraph_eval.py  smoke_local_rag.py  smoke_route_guide.py  smoke_vertex_ai.py  stategraph_observe_cache.py  stategraph_promote.py  stategraph_refresh_index.py  stategraph_release_gate.py
src/: __init__.py  __main__.py  langgraph_mvp.py  web.py  wikipedia_tools.py
tests/: test_langgraph_mvp_smoke.py  test_route_guide_smoke.py  test_stategraph_provider_parity.py  test_stategraph_quality_gate.py  test_stategraph_scaling_controls.py  test_web_app_smoke.py  test_web_app_vision.py  test_wikipedia_tools_helpers.py
(+25 files in other folders)
