[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naturalist-companion"
version = "0.1.0"
description = "Agentic Naturalist Companion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flask==3.1.2",
  "langgraph==0.5.3",
  "python-dotenv==1.2.1",
  "wikipedia==1.4.0",
]

[project.optional-dependencies]
dev = [
  "jupyterlab",
  "ipykernel",
  "ipywidgets",
]
ollama = [
  "langchain==0.3.27",
  "langchain-core==0.3.83",
  "langchain-community==0.3.31",
  "faiss-cpu==1.13.2",
  "chromadb==1.4.1",
  "langchain-chroma==0.2.6",
  "langchain-huggingface==0.3.1",
  "sentence-transformers==5.2.2",
  "torch==2.9.1",
  "langchain-ollama==0.3.10",
]
gcp = [
  "langchain==0.3.27",
  "langchain-core==0.3.83",
  "langchain-community==0.3.31",
  "faiss-cpu==1.13.2",
  "chromadb==1.4.1",
  "langchain-chroma==0.2.6",
  "langchain-huggingface==0.3.1",
  "sentence-transformers==5.2.2",
  "torch==2.9.1",
  "langchain-google-vertexai==2.1.2",
  "google-cloud-aiplatform==1.136.0",
]
dbrx = [
  "langchain==0.3.27",
  "langchain-core==0.3.83",
  "langchain-community==0.3.31",
  "faiss-cpu==1.13.2",
  "chromadb==1.4.1",
  "langchain-chroma==0.2.6",
  "langchain-huggingface==0.3.1",
  "sentence-transformers==5.2.2",
  "torch==2.9.1",
  "backoff==2.2.1",
  "databricks-langchain",
  "databricks-agents",
  "mlflow-skinny[databricks]",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["naturalist_companion*"]

[tool.setuptools.package-data]
naturalist_companion = ["templates/*.html", "static/*.css"]
